# verdict-tx

./: .env.example  .gitignore  .vercelignore  Anchor.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vercel.json
api/: markets.ts  sync.ts  tsconfig.json
app/: next.config.mjs  package.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: AppShell.tsx  BetBox.tsx  Countdown.tsx  Icon.tsx  MarketCard.tsx  SettlementTheater.tsx  VolumeCard.tsx  VolumeStat.tsx  WalletButton.tsx  WalletProvider.tsx
app/src/lib/: actions.ts  demoMarkets.ts  okxWalletAdapter.ts  program.ts  useLiveMarkets.ts  useOnchainMarkets.ts  useProtocolStats.ts
docs/: ARCHITECTURE.md  AUTO_SYNC.md  DEMO_SCRIPT.md  DESIGN.md  FRONTEND.md  ROADMAP.md  TXODDS_INTEGRATION.md
indexer/: package.json
indexer/src/: config.ts  flags.ts  index.ts  liveFeed.ts  mockSimulator.ts  realFeed.ts  server.ts  store.ts  txoddsData.ts
programs/pitchmarket/: Cargo.toml
programs/pitchmarket/src/: constants.rs  ed25519.rs  error.rs  instructions.rs  lib.rs  state.rs  txodds.rs
programs/txodds_stub/: Cargo.toml
programs/txodds_stub/src/: lib.rs
relayer/: README.md  package.json
relayer/src/: config.ts  createMarket.ts  index.ts  mock.ts  program.ts  resolveMarket.ts  resolveReal.ts  sync.ts  syncOnce.ts  txodds.ts  txoddsAuth.ts  txoddsData.ts
scripts/: deploy-devnet.sh  test-local.sh
shared/: package.json  signing.ts  tsconfig.json
shared/idl/: pitchmarket.json
shared/src/: index.ts  live.ts  pitchmarket-idl.ts
tests/: pitchmarket.ts
(+24 files in other folders)
