[package]
name = "txodds_stub"
version = "0.1.0"
description = "Local-test stub of the TxODDS txoracle program (validate_stat)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "txodds_stub"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.0.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
